# file-list

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPER.md  ISSUES.md  LICENSE  PLAN.md  README.md
examples/: custom_colors.rs  json_output.rs  plugin_system.rs  tree_display.rs
src/: colors.rs  config.rs  file_info.rs  formatting.rs  main.rs
src/display/: mod.rs  simple.rs  table.rs  tree.rs
