[package]
name = "file-list"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "fls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
chrono = "0.4"
tabled = "0.15"
users = "0.11"
