[package]
name = "file-list"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "fls"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
chrono = "0.4"
tabled = "0.20"
users = "0.11"
open = "5"
percent-encoding = "2"
